--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -5,14 +5,20 @@
   "main": "index.js",
   "scripts": {
     "dev": "DEBUG=app:* nodemon index",
-    "start": "NODE_ENV=production node index"
+    "start": "NODE_ENV=production node index",
+    "test": "mocha --exit",
+    "cover": "nyc npm run test",
+    "report": "nyc report --reporter=html && open coverage/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
+    "@hapi/joi": "^17.1.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.7"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
@@ -20,8 +26,13 @@
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
+    "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
-    "prettier": "^2.0.5"
+    "nyc": "^15.0.1",
+    "prettier": "^2.0.5",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2"
   },
   "husky": {
     "hooks": {
@@ -30,5 +41,14 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
+  },
+  "nyc": {
+    "all": true,
+    "include": [
+      "routes",
+      "services",
+      "lib",
+      "utils"
+    ]
   }
 }
